<resources>
    <string name="app_name">Navigation Component Demo</string>
    <string name="user_name">Dean\nWinchester</string>
    <string name="user_email">dean.winchester@gmail.com</string>
    <string name="avatar">avatar</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_desc">Nothing to show at this moment.</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="store_desc">No items are available to purchase at the moment.</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="desc_bookmarks">You don\'t have bookmarks yet.</string>
    <string name="history">History</string>
    <string name="desc_history">No history found. Looks like you haven\'t browsed anything yet.</string>
    <string name="settings">Settings</string>
    <string name="second_sample">Second Sample</string>
    <string name="sample_one_desc">There\'s nothing here too.</string>
    <string name="sample_fragment_one">Sample Fragment One</string>
    <string name="there_s_nothing_here_to_navigate_to_second_sample_click_below_button">There\'s nothing here. To navigate to second sample click below button.</string>
    <string name="sample_fragment_two">Sample Fragment Two</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="no_settings_available_currently">No settings available currently</string>
    <string name="no_files_found">No music files found on this device please refresh to scan again</string>
    <string name="refresh">Refresh</string>
    <string name="create_deep_link_notification">Create Deep Link Notification</string>
    <string name="navigation_to_destination">Navigation To Destination</string>
    <string name="navigation_with_action">Navigation With Action</string>
    <string name="bottom_bar_navigation">Bottom Bar Navigation</string>
    <string name="deep_links">Deep Links</string>
    <string name="pass_arguments">Pass Arguments</string>
    <string name="view_demo">View Demo</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="go_back">Go Back</string>
    <string name="scan_completed_no_files_found_from_device_storage">Scan completed. No files found from device storage</string>
    <string name="you_are_currently_viewing_example_of_how_pass_arguments_between_fragments">You are currently viewing example of how pass arguments between fragments</string>
</resources>
