<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnBottomBarNavigation"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/bottom_bar_navigation"
        app:layout_constraintBottom_toTopOf="@+id/btnNavigationUsingDestination"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/btnNavigationUsingDestination"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/navigation_to_destination"
        app:layout_constraintBottom_toTopOf="@+id/btnNavigationWithAction"
        app:layout_constraintTop_toBottomOf="@+id/btnBottomBarNavigation"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/btnNavigationWithAction"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/navigation_with_action"
        app:layout_constraintBottom_toTopOf="@+id/btnDeepLinking"
        app:layout_constraintTop_toBottomOf="@+id/btnNavigationUsingDestination"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/btnDeepLinking"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/deep_links"
        app:layout_constraintBottom_toTopOf="@+id/btnPassArguments"
        app:layout_constraintTop_toBottomOf="@+id/btnNavigationWithAction"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/btnPassArguments"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/pass_arguments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeepLinking"
        tools:layout_editor_absoluteX="8dp" />

</android.support.constraint.ConstraintLayout>