<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:gravity="center"
        android:text="@string/sample_fragment_two"
        android:textAlignment="center"
        android:textSize="@dimen/_32sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:gravity="center"
        android:text="@string/sample_one_desc"
        android:textAlignment="center"
        android:textColor="@color/textSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
        android:id="@+id/btnGoBack"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:paddingStart="@dimen/_16sdp"
        android:backgroundTint="@android:color/holo_purple"
        android:paddingEnd="@dimen/_16sdp"
        android:text="@string/go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDesc" />

</android.support.constraint.ConstraintLayout>
