<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/sad_face"
        android:adjustViewBounds="true"
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:gravity="center"
        android:text="@string/sample_fragment_one"
        android:textAlignment="center"
        android:textSize="@dimen/_32sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:gravity="center"
        android:text="@string/there_s_nothing_here_to_navigate_to_second_sample_click_below_button"
        android:textAlignment="center"
        android:textColor="@color/textSecondary"
        app:layout_constraintBottom_toTopOf="@+id/btnSecondSample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
        android:id="@+id/btnSecondSample"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="@dimen/_32sdp"
        android:paddingEnd="@dimen/_32sdp"
        android:text="@string/second_sample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />
</android.support.constraint.ConstraintLayout>
